# smartlocus

./: README.md  docker-compose.yaml
back-end/: .env  Cargo.toml
back-end/src/: main.rs
back-end/src/autenticacao/: login_teste.json  registro_teste.json  routes.rs  service.rs
back-end/src/item/: comando_curl.txt  registro_teste.json  routes.rs  service.rs  update_quantidade_teste.json
back-end/src/movimentacao/: routes.rs  service.rs
back-end/src/produtos/: mod.rs  repository.rs  routes.rs  service.rs
back-end/src/repositorios/: itens_repository.rs  mod.rs  movimentacoes_estoque_repository.rs  solicitacoes_materiais_repository.rs  usuarios_repository.rs
back-end/src/usuarios/: mod.rs  repository.rs  routes.rs  service.rs
database/: acesso-pelo-terminal.txt  dump_2026-06-09_17-03-58.sql  init.sql
front-end/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
front-end/.claude/: launch.json
front-end/src/: App.tsx  index.css  main.tsx
front-end/src/components/: Logo.tsx  ProtectedRoute.tsx  StatusBadge.tsx
front-end/src/components/layout/: Header.tsx  Sidebar.tsx
front-end/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  sheet.tsx  switch.tsx  table.tsx
front-end/src/context/: AuthContext.tsx
front-end/src/features/auth/: api.ts
front-end/src/lib/: api.ts  datas.ts
front-end/src/pages/: DashboardPage.tsx  EstoquePage.tsx  LoginPage.tsx  UsuariosPage.tsx
front-end/src/types/: index.ts
(+6 files in other folders)
