[package]
name = "smartlocus-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] } # Precisamos da feature serde aqui também!
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
